samples/_failures_safe/1761630420_b9b5b5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d73e585a.c: In function ‘print_token’:
./samples/SAFE/__tmp_d73e585a.c:156:12: error: missing terminating " character
  156 |     printf("%s: '%s' (line %d
      |            ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d73e585a.c:156:5: error: expected expression at end of input
  156 |     printf("%s: '%s' (line %d
      |     ^~~~~~
./samples/SAFE/__tmp_d73e585a.c:156:5: error: expected declaration or statement at end of input
